--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^1.20.2",
+    "caniuse-lite": "^1.0.30001534",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "latest": "^0.2.0",
     "mongodb": "^6.0.0",
     "node": "^20.5.0",
     "react": "^18.2.0",
