--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "serve": "^14.2.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve build -s -n -L -p $PORT",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
