--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
