--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "socket.io-client": "^4.7.2"
   },
   "scripts": {
-    "start": "node lib/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
